--- a/package.json
+++ b/package.json
@@ -1,33 +1,20 @@
 {
-  "name": "alc7days",
+  "name": "ALCUDACITY",
   "version": "1.0.0",
-  "description": "currency convertion",
-  "main": "index.js",
+  "description": "",
+  "main": "base.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hdJerry/alc7days.git"
-  },
-  "keywords": [
-    "currency"
-  ],
-  "author": "HD",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hdJerry/alc7days/issues"
-  },
-  "homepage": "https://github.com/hdJerry/alc7days#readme",
   "dependencies": {
-    "browserify": "^16.2.2",
-    "closest": "0.0.1",
-    "es6-import": "^1.6.4",
+    "app-root-path": "^2.0.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "idb": "^2.1.3",
-    "lodash": "^4.17.10",
-    "simple-transition": "^1.0.0"
+    "md5": "^2.2.1",
+    "mongoose": "^5.1.5",
+    "multer": "^1.3.0",
+    "unirest": "^0.5.1"
   }
 }
